Verified local storage and data model on page reload, removed excess css styling, tested functionality on private browser, and fixed any visible errors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,24 @@
 body {
   background-color: #f0f0f0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.04rem;
 }
 
-header h2 {
+header h2,
+header {
   font-weight: 400;
-}
-
-main h1 {
-  letter-spacing: 0.05rem;
+  background-color: #4b2373;
+  color: white;
 }
 
 input,
 textarea {
   width: 100%;
-  margin: 0.5rem auto 1rem auto;
-  padding: 0.6rem 0.3rem;
-  border-radius: 3px;
+  margin: 0.5rem auto 2rem;
+  padding: 0.8rem 0.3rem;
+  border-radius: 4px;
   border: 1px solid #b6b6b6;
+  resize: none;
 }
 
 input:focus,
@@ -25,38 +26,34 @@ textarea:focus {
   outline-color: #4b2373;
 }
 
-label {
-  font-weight: 600;
-}
-
 img {
   margin-bottom: 1.5rem;
-  width: 100%;
-}
-
-.bg-purple {
-  background-color: #4b2373;
-  color: white;
 }
 
 .btn-style {
-  border-radius: 3px;
-  padding: 0.4rem 1rem;
+  border-radius: 4px;
+  padding: 0.55rem 1.2rem;
   border-style: none;
+  background-color: #4b2373;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1rem;
+  letter-spacing: 0.04rem;
+  margin-bottom: 1.5rem;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
+.bold {
+  font-weight: 700;
 }
 
 .width-100 {
   width: 100%;
 }
 
-.flex-end {
-  justify-content: flex-end;
-}
-
 .text-end {
   text-align: right;
+}
+
+.med-text {
+  font-size: 1.2rem;
 }
